fixed property retaining issue

--- a/mmadu-registration/src/main/resources/templates/register.html
+++ b/mmadu-registration/src/main/resources/templates/register.html
@@ -1,15 +1,22 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Please sign in</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
-<h1>Form</h1>
-<form action="#" th:action="@{/register}" th:object="${user}" method="post">
-    <div th:replace="'domain/register-' +${domainId}">
+<div class="container">
+    <form class="form-signin" action="#" th:action="@{'/' + ${domainId} + '/register'}" th:object="${user}" method="post">
+        <h2 class="form-signin-heading">Register</h2>
+        <div th:replace="'domain/register-' +${domainId}">
 
-    </div>
-</form>
-</body>
-</html>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    </form>
+</div>
+</body></html>
