--- a/mmadu-registration/src/main/resources/templates/register.html
+++ b/mmadu-registration/src/main/resources/templates/register.html
@@ -7,17 +7,23 @@
     <meta name="author" content="">
     <title>Please sign in</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
-    <link th:href="@{/css/style.css}" rel="stylesheet" crossorigin="anonymous"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
     <form class="form-signin" action="#" th:action="@{'/' + ${domainId} + '/register' + ${redirectUrl == null ? '': ('?redirectUrl=' + redirectUrl)}}" th:object="${user}" method="post">
-        <h2 class="form-signin-heading">Register</h2>
+
+        <h1 id="headerOne" class="form-signin-heading" th:text="${profile.headerOne ?: 'Register'}">Register</h1>
+        <h2 id="headerTwo" class="form-signin-heading" th:if="${profile.headerTwo != null}" th:text="${profile.headerTwo}">Sub One</h2>
+        <h3 id="headerThree" class="form-signin-heading" th:if="${profile.headerThree != null}" th:text="${profile.headerThree}">Sub two</h3>
+
+        <p id="instructionParagraph" th:if="${profile.instruction}" th:text="${profile.instruction}">Please fill out the forms</p>
+
         <div th:replace="'domain/register-' +${domainId}">
 
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+
+        <button id="submitButton" class="btn btn-lg btn-primary btn-block" type="submit" th:text="${profile.submitButtonTitle ?: 'Register'}">Register</button>
     </form>
 </div>
 </body></html>
