--- a/mmadu-identity/src/main/resources/templates/login.html
+++ b/mmadu-identity/src/main/resources/templates/login.html
@@ -1,20 +1,102 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+>
 <head>
     <title>Spring Security Example </title>
+    <style type="text/css">
+        body {
+            background: #A44B38 url("https://photos-6.dropbox.com/t/2/AAC_bdqR8LMkjEe-HPIf4K1DhtseMLRHPklBSzJSuzglvA/12/5714737/jpeg/1024x768/3/1418346000/0/2/bkg-blur.jpg/CLHm3AIgASgBKAI/b7RrveA2022yJyfO9RyRvv7LjJQESukGHssHUxVThzw") no-repeat center center fixed;
+            background-size: cover;
+            font-family: "Roboto";
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        body::before {
+            z-index: -1;
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            background: #A44B38;
+            /* IE Fallback */
+
+            background: rgba(164, 75, 56, 0.8);
+            width: 100%;
+            height: 100%;
+        }
+        .form {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            background: #fff;
+            width: 285px;
+            margin: -140px 0 0 -182px;
+            padding: 40px;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+        }
+        .form h2 {
+            margin: 0 0 20px;
+            line-height: 1;
+            color: #A44B38;
+            font-size: 18px;
+            font-weight: 400;
+        }
+        .form input {
+            outline: none;
+            display: block;
+            width: 100%;
+            margin: 0 0 20px;
+            padding: 10px 15px;
+            border: 1px solid #ccc;
+            color: #ccc;
+            font-family: "Roboto";
+            box-sizing: border-box;
+            font-size: 14px;
+            font-wieght: 400;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            transition: 0.2s linear;
+        }
+        .form inputinput:focus {
+            color: #333;
+            border: 1px solid #A44B38;
+        }
+        .form button {
+            cursor: pointer;
+            background: #A44B38;
+            width: 100%;
+            padding: 10px 15px;
+            border: 0;
+            color: #fff;
+            font-family: "Roboto";
+            font-size: 14px;
+            font-weight: 400;
+        }
+        .form button:hover {
+            background: #774338;
+        }
+        .error,
+        .valid {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-<div th:if="${param.error}">
-    Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
+<section class="form animated flipInX">
+    <h1>Mmadu</h1>
+    <h2>Login To Your Account</h2>
+    <p th:if="${param.error}">Error. Please enter correct Username &amp; password.</p>
+    <p th:if="${param.logout}">
+        You have been logged out.
+    </p>
+    <form th:action="@{/login}" method="post" class="loginbox" autocomplete="off">
+        <input placeholder="Username" type="text" id="username" name="username"/>
+        <input placeholder="Password" type="password" id="password" name="password"/>
+        <button type="submit">Sign In</button>
+    </form>
+</section>
+<script >
+
+</script>
 </body>
 </html>
