--- a/mmadu-identity/src/main/resources/templates/login.html
+++ b/mmadu-identity/src/main/resources/templates/login.html
@@ -1,102 +1,58 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en"
 >
 <head>
-    <title>Spring Security Example </title>
-    <style type="text/css">
-        body {
-            background: #A44B38 url("https://photos-6.dropbox.com/t/2/AAC_bdqR8LMkjEe-HPIf4K1DhtseMLRHPklBSzJSuzglvA/12/5714737/jpeg/1024x768/3/1418346000/0/2/bkg-blur.jpg/CLHm3AIgASgBKAI/b7RrveA2022yJyfO9RyRvv7LjJQESukGHssHUxVThzw") no-repeat center center fixed;
-            background-size: cover;
-            font-family: "Roboto";
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-        body::before {
-            z-index: -1;
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            background: #A44B38;
-            /* IE Fallback */
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            background: rgba(164, 75, 56, 0.8);
-            width: 100%;
+    <title>Spring Security Example </title>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
+    <style>
+        html {
             height: 100%;
         }
-        .form {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            background: #fff;
-            width: 285px;
-            margin: -140px 0 0 -182px;
-            padding: 40px;
-            box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+
+        body {
+            min-height: 100%;
+            padding-top: 10%;
         }
-        .form h2 {
-            margin: 0 0 20px;
-            line-height: 1;
-            color: #A44B38;
-            font-size: 18px;
-            font-weight: 400;
-        }
-        .form input {
-            outline: none;
-            display: block;
-            width: 100%;
-            margin: 0 0 20px;
-            padding: 10px 15px;
-            border: 1px solid #ccc;
-            color: #ccc;
-            font-family: "Roboto";
-            box-sizing: border-box;
-            font-size: 14px;
-            font-wieght: 400;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            transition: 0.2s linear;
-        }
-        .form inputinput:focus {
-            color: #333;
-            border: 1px solid #A44B38;
-        }
-        .form button {
-            cursor: pointer;
-            background: #A44B38;
-            width: 100%;
-            padding: 10px 15px;
-            border: 0;
-            color: #fff;
-            font-family: "Roboto";
-            font-size: 14px;
-            font-weight: 400;
-        }
-        .form button:hover {
-            background: #774338;
-        }
-        .error,
-        .valid {
-            display: none;
-        }
+
     </style>
 </head>
-<body>
-<section class="form animated flipInX">
-    <h1>Mmadu</h1>
-    <h2>Login To Your Account</h2>
-    <p th:if="${param.error}">Error. Please enter correct Username &amp; password.</p>
-    <p th:if="${param.logout}">
-        You have been logged out.
-    </p>
-    <form th:action="@{/login}" method="post" class="loginbox" autocomplete="off">
-        <input placeholder="Username" type="text" id="username" name="username"/>
-        <input placeholder="Password" type="password" id="password" name="password"/>
-        <button type="submit">Sign In</button>
-    </form>
-</section>
-<script >
+<body class="bg-primary">
+<section class="container-fluid h-100">
+    <div class="row h-100 align-items-center">
+        <div class="col">
 
-</script>
+        </div>
+        <div class="col-11 col-sm-6 col-md-4">
+            <div class="card bg-white">
+                <form th:action="@{/login}" method="post" autocomplete="off" class="card-body">
+                    <div class="form-group">
+                        <input placeholder="Username" type="text" id="username" name="username" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <input placeholder="Password" type="password" id="password" name="password"
+                               class="form-control"/>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Sign In</button>
+                </form>
+            </div>
+        </div>
+        <div class="col">
+
+        </div>
+    </div>
+</section>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        th:src="@{/webjars/jquery/3.5.1/jquery.slim.min.js}"></script>
+<script src="http://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"
+></script>
 </body>
 </html>
