--- a/mmadu-identity/src/main/resources/templates/login.html
+++ b/mmadu-identity/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
 
     <title>Spring Security Example </title>
     <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
+          href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
+          th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
     <style>
         html {
             height: 100%;
