--- a/mmadu-identity/src/main/resources/templates/login.html
+++ b/mmadu-identity/src/main/resources/templates/login.html
@@ -29,16 +29,16 @@
 
         </div>
         <div class="col-11 col-sm-6 col-md-4">
-            <div class="card bg-white">
+            <div class="card bg-info">
                 <form th:action="@{/login}" method="post" autocomplete="off" class="card-body">
                     <div class="form-group">
-                        <input placeholder="Username" type="text" id="username" name="username" class="form-control"/>
+                        <input placeholder="Username" type="text" id="username" name="username" class="form-control bg-info"/>
                     </div>
                     <div class="form-group">
                         <input placeholder="Password" type="password" id="password" name="password"
-                               class="form-control"/>
+                               class="form-control bg-info"/>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Sign In</button>
+                    <button type="submit" class="btn btn-primary w-100 text-info">Sign In</button>
                 </form>
             </div>
         </div>
