updated theme .. again

--- a/common/theme-utils/src/lib/theme.scss
+++ b/common/theme-utils/src/lib/theme.scss
@@ -1,6 +1,6 @@
 $theme-colors: (
-        "primary": #D15C40,
-        "danger": #DF9253,
+        "primary": #DF9253,
+        "danger": #D15C40,
         "success": #3F4230,
         "secondary": #A3BAAE,
         "warning": #DF9253,
