--- a/mmadu-identity/src/main/resources/templates/authorization_page.html
+++ b/mmadu-identity/src/main/resources/templates/authorization_page.html
@@ -2,131 +2,71 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
 >
 <head>
-    <title>Spring Security Example </title>
-    <style type="text/css">
-        body {
-            background: #fff url("https://photos-6.dropbox.com/t/2/AAC_bdqR8LMkjEe-HPIf4K1DhtseMLRHPklBSzJSuzglvA/12/5714737/jpeg/1024x768/3/1418346000/0/2/bkg-blur.jpg/CLHm3AIgASgBKAI/b7RrveA2022yJyfO9RyRvv7LjJQESukGHssHUxVThzw") no-repeat center center fixed;
-            background-size: cover;
-            font-family: "Roboto";
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        body::before {
-            z-index: -1;
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            background: #fff;
-            /* IE Fallback */
-
-            background: rgba(255, 255, 255, 0.8);
-            width: 100%;
+    <title>Mmadu: Authorize Application</title>
+    <link rel="stylesheet"
+          href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
+          th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
+    <style>
+        html {
             height: 100%;
         }
 
-        .form {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            background: #A44B38;
-            width: 285px;
-            margin: -140px 0 0 -182px;
-            padding: 40px;
-            box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+        body {
+            min-height: 100%;
+            padding-top: 10%;
         }
 
-        .form h2 {
-            margin: 0 0 20px;
-            line-height: 1;
-            color: #fff;
-            font-size: 18px;
-            font-weight: 400;
-        }
-
-        .form input {
-            outline: none;
-            display: block;
-            width: 100%;
-            margin: 0 0 20px;
-            padding: 10px 15px;
-            border: 1px solid #A44B38;
-            color: #A44B38;
-            font-family: "Roboto";
-            box-sizing: border-box;
-            font-size: 14px;
-            font-wieght: 400;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            transition: 0.2s linear;
-        }
-
-        .form inputinput:focus {
-            color: #333;
-            border: 1px solid #fff;
-        }
-
-        .form button {
-            cursor: pointer;
-            background: #fff;
-            width: 100%;
-            padding: 10px 15px;
-            border: 0;
-            color: #A44B38;
-            font-family: "Roboto";
-            font-size: 14px;
-            font-weight: 400;
-        }
-
-        .form button:hover {
-            background: #fff;
-        }
-
-        .error,
-        .valid {
-            display: none;
-        }
-
-        [type="checkbox"]
-        {
-            vertical-align:middle;
-        }
-        label,#checkid{
-            display: inline-block;
-            vertical-align: middle;
-        }
     </style>
 </head>
-<body>
-<section class="form animated flipInX">
-    <h2 style="margin:auto">An application wants to access your account</h2>
+<body class="bg-info">
+<section class="container-fluid h-100">
+    <div class="row h-100 align-items-center">
+        <div class="col">
 
-    <form th:action="@{/oauth/authorize}" method="post" th:object="${authorizationResponse}" class="loginbox">
-        <div th:if="${not #lists.isEmpty(availableScopes)}">
-            <p style="color: #ffffff;">
-                Select scopes to approve
-            </p>
-
-            <select id="scopeSelection"
-                    multiple="multiple"
-                    th:field="*{scopes}">
-
-                <option th:each="scope: ${availableScopes}"
-                        th:value="${scope.code}"
-                        th:text="${scope.name + ': ' + scope.description}"></option>
-
-            </select>
         </div>
-        <span>
-            <input id="checkid" type="checkbox" th:field="*{authorize}"/>
-            <label for="checkid"  style="word-wrap:break-word; color: #ffffff;">I want to authorize this application</label>
-        </span>
-        <div><input type="submit" value="Confirm"/></div>
-    </form>
-</section>
-<script>
+        <div class="col-11 col-sm-6 col-md-4 text-center">
+            <h2 class="text-primary">Approve Access</h2>
+            <div class="bg-info text-center">
+                <form th:action="@{/oauth/authorize}" method="post" th:object="${authorizationResponse}"
+                      >
+                    <div class="form-group" th:if="${not #lists.isEmpty(availableScopes)}">
+                        <select id="scopeSelection"
+                                multiple="multiple"
+                                th:field="*{scopes}" class="form-control">
 
-</script>
+                            <!--/*/
+                              <option th:each="scope: ${availableScopes}"
+                                    th:value="${scope.code}"
+                                    th:text="${scope.name + ': ' + scope.description}"></option>
+                            /*/-->
+
+                            <!--/*-->
+                            <option>Edit: Edit all Users</option>
+                            <option>View: View all Users</option>
+                            <option>Scan: Perform Scan Operations</option>
+                            <!--*/-->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <input id="checkid" type="checkbox" th:field="*{authorize}" class="bg-primary"/>
+                        <label for="checkid"
+                               style="word-wrap:break-word;" class="text-primary"><strong>I want to authorize this application</strong></label>
+                    </div>
+                    <div><input type="submit" value="Confirm" class="btn-success btn w-100"/></div>
+                </form>
+            </div>
+        </div>
+        <div class="col">
+
+        </div>
+    </div>
+</section>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        th:src="@{/webjars/jquery/3.5.1/jquery.slim.min.js}"></script>
+<script src="http://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"
+></script>
 </body>
 </html>
