added page root to default links

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,10 +26,10 @@
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="/guides">GETTING STARTED</a></li>
-            <li><a href="/reference">DOCS</a></li>
-            <li><a href="/community">COMMUNITY</a></li>
-            <li><a href="/blog">BLOG</a></li>
+            <li><a href="{{page.root}}/guides">GETTING STARTED</a></li>
+            <li><a href="{{page.root}}/reference">DOCS</a></li>
+            <li><a href="{{page.root}}/community">COMMUNITY</a></li>
+            <li><a href="{{page.root}}/blog">BLOG</a></li>
         </ul>
     </div>
 </div>
