[ci skip] fixed link issue

--- a/docs/_layouts/blog-list.html
+++ b/docs/_layouts/blog-list.html
@@ -27,10 +27,10 @@
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="{{page.root}}guides">GETTING STARTED</a></li>
-            <li><a href="{{page.root}}reference">DOCS</a></li>
-            <li><a href="{{page.root}}community">COMMUNITY</a></li>
-            <li><a href="{{page.root}}blog">BLOG</a></li>
+            <li><a href="{{page.root}}../guides">GETTING STARTED</a></li>
+            <li><a href="{{page.root}}../reference">DOCS</a></li>
+            <li><a href="{{page.root}}../community">COMMUNITY</a></li>
+            <li><a href="{{page.root}}../blog">BLOG</a></li>
         </ul>
     </div>
 </div>
