--- a/docs/_layouts/reference.html
+++ b/docs/_layouts/reference.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Your name goes here">
     <meta name="copyright" content="Maybe consider a Creative Commons license">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="{{page.root}}css/font-awesome.css">
-    <link rel="stylesheet" href="{{page.root}}css/coderay.css">
-    <link rel="stylesheet" href="{{page.root}}css/asciidoctor.css">
+    <link rel="stylesheet" href="{{page.root}}../css/font-awesome.css">
+    <link rel="stylesheet" href="{{page.root}}../css/coderay.css">
+    <link rel="stylesheet" href="{{page.root}}../css/asciidoctor.css">
     <script src="{{page.root}}../js/vendor/modernizr.js"></script>
     <script src="{{page.root}}../js/toc.js"></script>
 </head>
@@ -27,10 +27,10 @@
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="{{page.root}}guides">GETTING STARTED</a></li>
-            <li><a href="{{page.root}}reference">DOCS</a></li>
-            <li><a href="{{page.root}}community">COMMUNITY</a></li>
-            <li><a href="{{page.root}}blog">BLOG</a></li>
+            <li><a href="{{page.root}}../guides">GETTING STARTED</a></li>
+            <li><a href="{{page.root}}../reference">DOCS</a></li>
+            <li><a href="{{page.root}}../community">COMMUNITY</a></li>
+            <li><a href="{{page.root}}../blog">BLOG</a></li>
         </ul>
     </div>
 </div>
