--- a/common/theme-utils/src/lib/theme.scss
+++ b/common/theme-utils/src/lib/theme.scss
@@ -1,10 +1,10 @@
 $theme-colors: (
-        "primary": #DF9253,
-        "danger": #D15C40,
-        "success": #3F4230,
-        "secondary": #A3BAAE,
-        "warning": #DF9253,
-        "info": #F3F6F5
+        "primary": #007D76,
+        "danger": #2B2B2B,
+        "success": #FCFFFE,
+        "secondary": #E6354C,
+        "warning": #BABABA,
+        "info": #53FCE6
 );
 
 @import "node_modules/bootstrap/scss/bootstrap";
