tested identity theming

--- a/mmadu-identity/src/main/resources/templates/login.html
+++ b/mmadu-identity/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M167.224 90.2754H146.487C144.234 90.4017 142.236 88.9844 141.853 86.9863L139.285 64.7184C139.236 62.5157 141.187 60.6937 143.641 60.65C143.78 60.6485 143.919 60.6515 144.058 60.6606H164.801C167.053 60.5342 169.051 61.953 169.435 63.9496L171.999 86.2175C172.046 88.4232 170.092 90.2438 167.637 90.2859C167.499 90.2874 167.362 90.2844 167.224 90.2754Z" fill="#E6354C"/>
             </svg>
 
-            <div th:if="${domainConfiguration.themeConfiguration.logoSvg != null}" th:utext="${domainConfiguration.themeConfiguration.logoSvg}">
+            <div style="margin-bottom: 10px" th:if="${domainConfiguration.themeConfiguration.logoSvg != null}" th:utext="${domainConfiguration.themeConfiguration.logoSvg}">
 
             </div>
             </div>
