--- a/mmadu-identity/src/main/resources/templates/authorization_page.html
+++ b/mmadu-identity/src/main/resources/templates/authorization_page.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet"
           href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
           th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
+    <link rel="stylesheet" th:href="@{'/themes/' + ${session.domain} + '/css/style.css'}" href="../themes/css/style.css">
     <style>
         html {
             height: 100%;
