improved look and feel of the forms

--- a/mmadu-registration/src/main/resources/templates/password_reset_initiated.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset_initiated.html
@@ -16,11 +16,13 @@
             integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
             crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-primary">
 <div class="container">
-    <p id="instructionParagraph" th:text="${domainConfiguration.passwordReset.initiationSuccessMessage ?: 'An email has been sent to your inbox. Please click the link to reset your account.'}">
-        An email has been sent to your inbox. Please click the link to reset your account.
-    </p>
+    <div class="form-signin card bg-info">
+        <div class="form-group" id="instructionParagraph" th:text="${domainConfiguration.passwordReset.initiationSuccessMessage ?: 'An email has been sent to your inbox. Please click the link to reset your account.'}">
+            An email has been sent to your inbox. Please click the link to reset your account.
+        </div>
+    </div>
 </div>
 <script th:src="@{/js/main.js}"></script>
 </body>
