--- a/mmadu-registration/src/main/resources/templates/password_reset_completed.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset_completed.html
@@ -16,11 +16,13 @@
             integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
             crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-primary">
 <div class="container">
-    <p id="instructionParagraph">
-        Your Password has been reset
-    </p>
+    <div class="form-signin card bg-info">
+        <div class="form-group" id="instructionParagraph">
+            Your Password has been reset
+        </div>
+    </div>
 </div>
 <script th:src="@{/js/main.js}"></script>
 </body>
