fixed form user interface

--- a/mmadu-registration/src/main/resources/templates/password_reset.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset.html
@@ -18,18 +18,34 @@
 </head>
 <body class="bg-primary">
 <div class="container">
+    <div style="width: 100%; height: 100%; text-align: center">
+        <svg th:if="${domainConfiguration.theme.logoSvg == null}" width="172" height="91" viewBox="0 0 172 91" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5%;">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M2.35178 90.2753H27.0197C28.4845 90.2753 30.0833 88.378 30.9464 85.6547L55.0211 7.94272C56.2462 3.94503 55.3496 0 53.2061 0H28.5432C27.0784 0 25.4796 1.89729 24.6165 4.62059L23.6109 7.87953L21.8361 13.6556L0.561885 82.3326L0.541774 82.3972C-0.664893 86.3724 0.233404 90.2753 2.35178 90.2753Z" fill="#095248"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M69.8416 90.2753H45.1787C43.7139 90.2753 42.5357 88.378 42.2961 85.6547L42.0095 82.3957C42.0128 82.3747 42.0128 82.3521 42.0095 82.331L35.9862 13.6556L35.4985 7.87953L35.1952 4.62059C34.9723 1.89729 33.7941 0 32.3293 0H63.7463C65.211 0 66.3892 1.89729 66.6289 4.62059L73.4231 82.3326C73.7566 86.3302 71.9851 90.2753 69.8416 90.2753Z" fill="#53FCE6"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M107.236 0H82.5818C81.1171 0 79.5115 1.89729 78.6551 4.62059L77.6177 7.87953L77.5976 7.94422L56.0301 76.6196L54.2151 82.3957L53.1894 85.6547C52.3347 88.3825 50.7292 90.2753 49.2644 90.2753H80.6813C82.1461 90.2753 83.7516 88.378 84.608 85.6547L109.003 7.94272C110.261 3.94503 109.382 0 107.236 0Z" fill="#50A398"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M123.079 90.2753H98.4162C96.9515 90.2753 95.7733 88.378 95.5336 85.6547L95.247 82.3957C95.2487 82.3747 95.2487 82.3521 95.247 82.331L89.2238 13.6556L88.721 7.87953L88.4327 4.62059C88.2098 1.89729 87.0317 0 85.5669 0H116.984C118.449 0 119.627 1.89729 119.866 4.62059L126.661 82.3326C126.994 86.3302 125.223 90.2753 123.079 90.2753Z" fill="#E6354C"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M167.224 90.2754H146.487C144.234 90.4017 142.236 88.9844 141.853 86.9863L139.285 64.7184C139.236 62.5157 141.187 60.6937 143.641 60.65C143.78 60.6485 143.919 60.6515 144.058 60.6606H164.801C167.053 60.5342 169.051 61.953 169.435 63.9496L171.999 86.2175C172.046 88.4232 170.092 90.2438 167.637 90.2859C167.499 90.2874 167.362 90.2844 167.224 90.2754Z" fill="#E6354C"/>
+        </svg>
+
+        <div style="margin-bottom: 10px" th:if="${domainConfiguration.theme.logoSvg != null}" th:utext="${domainConfiguration.theme.logoSvg}">
+
+        </div>
+    </div>
+    <p class="alert alert-danger" role="alert" th:if="${param.error}">
+        An Error occurred. Please fix form issues and try again.
+    </p>
     <form class="form-signin card bg-info" action="#"
           th:action="@{'/' + ${domainId} + '/passwordReset'}"
           th:object="${passwordResetRequest}" method="post">
 
-        <h1 id="headerOne" class="form-signin-heading"
+        <h3 class="form-signin-heading"
             th:text="${domainConfiguration.passwordReset.initiationFormTitle ?: 'Account Reset'}">
             Account Reset
-        </h1>
-        <h2 id="headerTwo" class="form-signin-heading"
+        </h3>
+        <p id="headerTwo" class="form-signin-heading"
             th:text="${domainConfiguration.passwordReset.initiationFormDescription ?: 'Enter Your Username'}">
             Enter your username
-        </h2>
+        </p>
 
         <div class="form-group">
             <input placeholder="User" type="text" id="user" name="user"
