added proxy path for serving forms through proxy

--- a/mmadu-registration/src/main/resources/templates/password_reset.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset.html
@@ -8,9 +8,9 @@
     <title>Enter Your User Details</title>
     <link rel="stylesheet"
           href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
-          th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
-    <link th:href="@{/css/style.css}" href="../static/css/style.css" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{'/themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
+          th:href="@{${proxyPath} + 'webjars/mmadu-theme-utils/css/theme.css'}">
+    <link th:href="@{${proxyPath} +'css/style.css'}" href="../static/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{${proxyPath} + 'themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
     <script
             src="https://code.jquery.com/jquery-3.4.1.slim.js"
             integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
@@ -35,7 +35,7 @@
         An Error occurred. Please fix form issues and try again.
     </p>
     <form class="form-signin card bg-info" action="#"
-          th:action="@{'/' + ${domainId} + '/passwordReset'}"
+          th:action="@{${proxyPath} + ${domainId} + '/passwordReset'}"
           th:object="${passwordResetRequest}" method="post">
 
         <h3 class="form-signin-heading"
