--- a/mmadu-registration/src/main/resources/templates/password_reset_confirm.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset_confirm.html
@@ -8,9 +8,9 @@
     <title>Enter Your User Details</title>
     <link rel="stylesheet"
           href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
-          th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
-    <link th:href="@{/css/style.css}" href="../static/css/style.css" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{'/themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
+          th:href="@{${proxyPath} + 'webjars/mmadu-theme-utils/css/theme.css'}">
+    <link th:href="@{${proxyPath} +'css/style.css'}" href="../static/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{${proxyPath} + 'themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
     <script
             src="https://code.jquery.com/jquery-3.4.1.slim.js"
             integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
@@ -36,7 +36,7 @@
     </p>
 
     <form class="form-signin card bg-info" action="#"
-          th:action="@{'/' + ${domainId} + '/passwordReset/confirm'}"
+          th:action="@{${proxyPath} + ${domainId} + '/passwordReset/confirm'}"
           th:object="${passwordResetRequestConfirm}" method="post">
         <input type="hidden" name="otpId" th:value="${passwordResetRequestConfirm.otpId}">
         <input type="hidden" name="userId" th:value="${passwordResetRequestConfirm.userId}">
