--- a/mmadu-registration/src/main/resources/templates/register.html
+++ b/mmadu-registration/src/main/resources/templates/register.html
@@ -8,9 +8,9 @@
     <title>Please sign in</title>
     <link rel="stylesheet"
           href="../../../../../../mmadu/common/theme-utils/src/main/resources/META-INF/resources/webjars/mmadu-theme-utils/css/theme.css"
-          th:href="@{/webjars/mmadu-theme-utils/css/theme.css}">
-    <link th:href="@{/css/style.css}" href="../static/css/style.css" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{'/themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
+          th:href="@{${proxyPath} + 'webjars/mmadu-theme-utils/css/theme.css'}">
+    <link th:href="@{${proxyPath} +'css/style.css'}" href="../static/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{${proxyPath} + 'themes/' + ${domainId} + '/css/style.css'}" href="../themes/css/style.css">
     <script
             src="https://code.jquery.com/jquery-3.4.1.slim.js"
             integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
@@ -35,7 +35,7 @@
         An Error occurred. Please fix form issues and try again.
     </p>
     <form class="form-signin card bg-info" action="#"
-          th:action="@{'/' + ${domainId} + '/register' + '/' + ${profile.code} + '/' + ${redirectUrl == null ? '': ('?redirectUrl=' + redirectUrl)}}"
+          th:action="@{${proxyPath} + ${domainId} + '/register' + '/' + ${profile.code} + '/' + ${redirectUrl == null ? '': ('?redirectUrl=' + redirectUrl)}}"
           th:object="${user}" method="post">
 
         <h1 id="headerOne" class="form-signin-heading" th:text="${profile.headerOne ?: 'Register'}">Register</h1>
@@ -56,6 +56,6 @@
         </button>
     </form>
 </div>
-<script th:src="@{/js/main.js}"></script>
+<script th:src="@{${proxyPath} + 'js/main.js'}"></script>
 </body>
 </html>
